keep the html installation pages but redirect them to installation manuals from wiki section

--- a/Installation-fr.html
+++ b/Installation-fr.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="1;url=https://servicecanada.github.io/invitation-manager/docs/Installation-fr.html" />
+	<meta http-equiv="refresh" content="1;url=https://github.com/ServiceCanada/invitation-manager/wiki/Guide-d'installation" />
 	<title> Invitation Manager Installation Manual </title>
 </head>
 </html>
