--- a/Installation.html
+++ b/Installation.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="1;url=https://servicecanada.github.io/invitation-manager/docs/Installation.html" />
+	<meta http-equiv="refresh" content="1;url=https://github.com/ServiceCanada/invitation-manager/wiki/Installation-Guide" />
 	<title> Invitation Manager Installation Manual </title>
 </head>
 </html>
